# THSXproject

./: CAN2USB.hpp  CMakeLists.txt  Can232.hpp  HubMotor.hpp  controller.hpp  data.txt  kinematics.hpp  main  main.cpp  opencv_test1.cpp  package.xml  plot.py  readme.txt  socketCAN.cpp  socketCAN.h  socketCAN.hpp  test1  test1.cpp  test2  test2.cpp
include/HubMotor_pkg/: 4M485.h  AGV_MotionControl.hpp  Can2Usb2.0.h  HubMotor.hpp  PID.hpp  lib_emuc_2.h
include/HubMotor_pkg/IOPort/: IOPort.h
include/HubMotor_pkg/serialPort/: SerialPort.h
include/HubMotor_pkg/unitreeMotor/: unitreeMotor.h
launch/: AGV_PathPlanning.launch  AGV_bringup.launch  bringup.sh
motor-controller-firmware-42转向电机230525/: .gitignore  .mxproject  StepMotorDriverV2.0.ioc  二轴机器人通讯协议.xls
motor-controller-firmware-42转向电机230525/Core/Inc/: SWO.h  bsp_init.h  common.h  inner_algorithm.h  main.h  msp_init.h  multi_task.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  user_callback.h
motor-controller-firmware-42转向电机230525/Core/Src/: bsp_init.c  inner_algorithm.c  main.c  main.c.orig  msp_init.c  multi_task.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  user_callback.c
motor-controller-firmware-42转向电机230525/MDK-ARM/: Note.txt  StepMotorDriverV2.0.uvguix.梁涵宇  StepMotorDriverV2.0.uvoptx  StepMotorDriverV2.0.uvprojx
motor-controller-firmware-42转向电机230525/MDK-ARM/Encoders/: BRT38R0.c  BRT38R0.h
motor-controller-firmware-42转向电机230525/MDK-ARM/Oledlib/: oled_bmp.c  oled_driver.c
motor-controller-firmware-42转向电机230525/MDK-ARM/TMClib/: SPI_TMC.c  TMC5160.c  TMC5160_Mask_Shift.h  TMC5160_Register.h
scripts/: path_ros.py  pgm.py  rrt_planner.py
scripts/data/: map.pgm  map.yaml
scripts/data/old/: company.yaml  map.yaml
src/: 4M485.cpp  Can2Usb2.0.cpp  HubMotor.cpp  HubMotor.hpp  HubMotor_old.hpp  MotionControl.cpp  control.cpp  control_mode1.cpp  control_mode2.cpp  control_mode3.cpp  control_mode4.cpp  control_mode5.cpp  controlcan.h  main  main.cpp  readme.txt
巡航小车57步进/: .mxproject  StepMotorDriverV2.0.ioc  二轴机器人通讯协议.xls
巡航小车57步进/Core/Inc/: main.h
巡航小车57步进/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
巡航小车57步进/MDK-ARM/: StepMotorDriverV2.0.uvguix.梁涵宇  StepMotorDriverV2.0.uvoptx  StepMotorDriverV2.0.uvprojx  startup_stm32f103xb.lst
巡航小车57步进/MDK-ARM/Oledlib/: oled_config.c  oled_debug.c  oled_draw.c  oled_font.c  test.c
巡航小车57步进/MDK-ARM/StepMotorDriverV2.0/: StepMotorDriverV2.0  StepMotorDriverV2.0_StepMotorDriverV2.0.dep  StepMotorDriverV2.build_log.htm  StepMotorDriverV2.hex  StepMotorDriverV2.htm  StepMotorDriverV2.map  main.crf  main.d  oled_basic.d  oled_bmp.crf  oled_color.d  oled_config.crf  oled_config.d  oled_font.crf  oled_font.d  spi_tmc.d  stm32f1xx_hal.crf  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_flash.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_spi.crf  stm32f1xx_hal_spi.d  stm32f1xx_hal_tim_ex.crf  stm32f1xx_hal_uart.d  stm32f1xx_it.d  system_stm32f1xx.crf  test.d  tmc5160.crf  tmc5160.d
巡航小车57步进/MDK-ARM/TMClib/: SPI_TMC.c
巡航小车57步进0531/Core/Inc/: stm32f1xx_it.h
巡航小车57步进0531/MDK-ARM/: JLinkLog.txt  StepMotorDriverV2.0.uvguix.Administrator  StepMotorDriverV2.0.uvguix.sunfl4  StepMotorDriverV2.0.uvguix.梁涵宇  StepMotorDriverV2.0.uvoptx  StepMotorDriverV2.0.uvprojx
轮电机/: HubMotor.hpp  main.cpp  readme.txt
(+66 files in other folders)
